--- a/default.yaml
+++ b/default.yaml
@@ -36,7 +36,7 @@ switcher:
     - ascii_punct
     - traditionalization
     - emoji
-  fold_options: true            # 呼出时是否折叠，多方案时建议折叠 true ，一个方案建议展开 false
+  fold_options: false            # 呼出时是否折叠，多方案时建议折叠 true ，一个方案建议展开 false
   abbreviate_options: true      # 折叠时是否缩写选项
   option_list_separator: ' / '  # 折叠时的选项分隔符
 
