--- a/default.yaml
+++ b/default.yaml
@@ -165,8 +165,8 @@ recognizer:
 # 快捷键
 key_binder:
   # Lua 配置: 以词定字（上屏当前词句的第一个或最后一个字）
-  select_first_character:
-  select_last_character: "grave"
+  select_first_character: bracketleft
+  select_last_character: bracketright
 
   bindings:
     # Tab / Shift+Tab 切换光标至下/上一个拼音
