--- a/default.yaml
+++ b/default.yaml
@@ -179,6 +179,7 @@ key_binder:
     # Option/Alt + ←/→ 切换光标至下/上一个拼音
     - { when: composing, accept: Alt+Left, send: Shift+Left }
     - { when: composing, accept: Alt+Right, send: Shift+Right }
+    - { when: always, accept: Shift+Return, send: Return }
 
     # 翻页 - =
     - { when: has_menu, accept: minus, send: Page_Up }
@@ -194,7 +195,7 @@ key_binder:
 
     # numbered_mode_switch:
     # - { when: always, accept: Control+Shift+1, select: .next }               # 在最近的两个方案之间切换
-    - { when: always, accept: Control+space, toggle: ascii_mode }          # 切换中英
+    - { when: always, accept: Control+Shift+space, toggle: ascii_mode }          # 切换中英
     - { when: always, accept: Control+period, toggle: ascii_punct }           # 切换中英标点
     - { when: always, accept: Control+Shift+4, toggle: traditionalization }    # 切换简繁
     # - { when: always, accept: Control+Shift+5, toggle: full_shape }          # 切换全半角
